--- a/index.css
+++ b/index.css
@@ -30,7 +30,9 @@ input,
 textarea,
 button,
 select,
-a {
+a,
+img,
+div {
   -webkit-tap-highlight-color: transparent;
 }
 input:-webkit-autofill,
@@ -41,7 +43,7 @@ input:-webkit-autofill:active {
   -webkit-text-fill-color: #fff !important;
 }
 :root {
-  --color-main: #c12d00;
+  --color-main: #a92700;
   --color-highlight: #ffe355;
   --color-text: white;
   --shadow: -5px 5px 7px rgba(0, 0, 0, 0.3);
@@ -100,11 +102,8 @@ html.is-rendering .transition-slideIn {
   transform: scale(0%);
 }
 @media only screen and (max-width: 750px) {
-  html.is-animating .transition-slideIn {
-    transition: transform 0.3s ease-in-out;
-  }
-  html.is-rendering .transition-slideIn {
-    transition: transform 0.3s ease-in-out;
+  .transition-slideIn {
+    transition: all 0.5s ease-in-out;
   }
 }
 .navBar {
@@ -115,6 +114,7 @@ html.is-rendering .transition-slideIn {
   width: calc(100% - var(--32px) * 2);
   padding: 0 var(--32px);
   position: fixed;
+  z-index: 2;
 }
 .brand {
   font-family: "Brand";
@@ -144,11 +144,126 @@ html.is-rendering .transition-slideIn {
   text-decoration: underline;
   color: var(--color-highlight);
 }
+.navMobile {
+  display: none;
+}
+@media only screen and (max-width: 750px) {
+  .navBar {
+    align-items: flex-start;
+    padding-left: var(--16px);
+    width: calc(100% - var(--16px));
+  }
+  .navBar h1 {
+    margin: auto 0;
+  }
+  .nav {
+    display: none;
+  }
+  .navMobile {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-end;
+    margin-top: var(--16px);
+    gap: var(--16px);
+  }
+  .hamburger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: var(--color-text);
+    -webkit-user-select: none;
+    user-select: none;
+    width: var(--64px);
+    height: var(--64px);
+    border-radius: var(--48px) 0px 0px var(--48px);
+    padding-left: var(--16px);
+    gap: 5px;
+    position: relative;
+    transition: background-color 0.5s;
+    box-shadow: var(--shadow);
+  }
+  .navMobile input {
+    display: none;
+  }
+  .hamburger span {
+    display: block;
+    width: 27px;
+    height: 4px;
+    background: var(--color-main);
+    border-radius: 3px;
+    transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
+      background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
+  }
+
+  .hamburger span:nth-child(1) {
+    transform-origin: 0% 0%;
+  }
+
+  .hamburger span:nth-child(3) {
+    transform-origin: 0% 100%;
+  }
+  .navMobile input:checked ~ .hamburger > span:nth-child(1) {
+    opacity: 1;
+    transform: rotate(45deg);
+    background-color: black;
+  }
+  .navMobile input:checked ~ .hamburger > span:nth-child(2) {
+    opacity: 0;
+    transform: rotate(0deg) scale(0.2, 0.2);
+  }
+  .navMobile input:checked ~ .hamburger > span:nth-child(3) {
+    transform: rotate(-45deg);
+    background-color: black;
+  }
+  .navMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    top: var(--96px);
+    right: 5%;
+    border-radius: var(--32px) 0 0 var(--32px);
+    list-style-type: none;
+    -webkit-font-smoothing: antialiased;
+    transform: translateX(110%);
+    background-color: var(--color-text);
+    transition: transform 0.4s;
+    overflow: hidden;
+    box-shadow: var(--shadow);
+    padding: var(--16px);
+    gap: var(--16px);
+  }
+  .navMenu li a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-decoration: none;
+    color: black;
+    transition: color 0.3s ease;
+    width: var(--96px);
+    height: var(--80px);
+    font-size: var(--20px);
+    font-weight: 600;
+  }
+  .navMenu li a img {
+    width: var(--32px);
+  }
+
+  /*
+ * And let's slide it in from the right
+ */
+  .navMobile input:checked ~ .navMenu {
+    transform: none;
+  }
+}
 /* Hero */
 .heroSection {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
   background-color: var(--color-main);
   width: 100%;
@@ -160,20 +275,36 @@ html.is-rendering .transition-slideIn {
   overflow: hidden;
   gap: var(--24px);
 }
+.heroTitleContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: var(--96px);
+  margin-bottom: -8rem;
+}
+.megaText {
+  position: relative;
+  z-index: 1;
+  margin: 0;
+  transform: rotate(-20deg);
+  font-size: 10rem;
+  text-shadow: var(--shadow);
+  font-family: "Brand";
+  color: var(--color-highlight);
+}
 .heroTitle {
   color: var(--color-text);
   text-shadow: var(--shadow);
   font-weight: 600;
   font-style: normal;
-  line-height: 15rem;
-  font-size: 20rem;
+  line-height: 10rem;
+  font-size: 16rem;
   margin: 0;
-  margin-left: 30%;
-  margin-bottom: -16rem;
 }
+
 .imgAndTextContainer {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   width: 100%;
 }
@@ -183,22 +314,11 @@ html.is-rendering .transition-slideIn {
   flex-direction: column;
 }
 .heroImg {
-  margin: var(--64px);
-  margin-bottom: var(--20px);
-}
-.imgText {
-  position: absolute;
-  left: 5%;
-  top: 10%;
-  transform: rotate(-20deg);
-  z-index: 1;
-  font-size: var(--96px);
-  font-family: "Brand";
-  color: var(--color-highlight);
+  margin-bottom: var(--16px);
 }
 .imgShadow {
   background-color: rgba(0, 0, 0, 0.454);
-  width: 70%;
+  width: 80%;
   height: var(--32px);
   border-radius: 50%;
   box-shadow: 0 0 10px black;
@@ -207,9 +327,8 @@ html.is-rendering .transition-slideIn {
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  width: 50%;
-  height: 70%;
   flex-direction: column;
+  width: 35%;
 }
 .heroSubtitle {
   font-size: var(--32px);
@@ -248,21 +367,127 @@ html.is-rendering .transition-slideIn {
 .button:focus {
   outline: none;
 }
-@media only screen and (max-width: 700px) {
-  .titleHero {
-    font-size: var(--48px);
+@media only screen and (max-width: 1700px) {
+  .heroTitleContainer {
+    margin-bottom: -5rem;
   }
-  .subtitleHero {
+  .heroTitle {
+    font-size: 16rem;
+  }
+  .heroImg {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 1500px) {
+  .heroTitle {
+    font-size: 13rem;
+  }
+  .megaText {
+    font-size: 8rem;
+  }
+}
+@media only screen and (max-width: 1200px) {
+  .heroTitleContainer {
+    gap: var(--48px);
+  }
+  .heroTitle {
+    font-size: 10rem;
+  }
+  .megaText {
+    font-size: 8rem;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .heroTitleContainer {
+    margin-bottom: -3rem;
+  }
+  .heroTitle {
+    font-size: 8rem;
+  }
+  .heroSubtitle {
+    font-size: var(--24px);
+  }
+  .button {
     font-size: var(--20px);
   }
-  .buttonHero {
-    padding: 0.5rem 1.5rem;
-    font-size: 1.2rem;
+  .textContainer {
+    width: 60%;
+  }
+  .imgText {
+    top: 21%;
+    font-size: var(--80px);
+  }
+  .heroImg {
+    width: 100%;
+    margin: 0;
+  }
+  .imgShadow {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 900px) {
+  .heroSection {
+    justify-content: center;
+  }
+  .heroTitleContainer {
+    margin: 0;
+  }
+  .megaText {
+    font-size: 6rem;
+    line-height: 6rem;
+  }
+  .heroTitle {
+    font-size: 7rem;
+    line-height: 0rem;
+  }
+  .imgText {
+    font-size: var(--64px);
+    top: 24%;
+  }
+}
+@media only screen and (max-width: 750px) {
+  .heroSection {
+    height: calc(100svh - var(--80px));
+  }
+  .heroTitleContainer {
+    flex-direction: column;
+  }
+  .megaText {
+    font-size: 5rem;
+    line-height: 4rem;
+  }
+  .heroTitle {
+    font-size: 5rem;
+    line-height: 4rem;
+  }
+  .imgAndTextContainer {
+    flex-direction: column;
+    height: 70%;
+  }
+  .imgContainer {
+    height: 70%;
+  }
+  .heroImg {
+    height: 100%;
+    width: auto;
+  }
+  .imgShadow {
+    display: none;
+  }
+  .textContainer {
+    align-items: center;
+    gap: var(--16px);
+    width: 100%;
+    height: 30%;
+  }
+  .heroSubtitle {
+    margin: 0;
   }
 }
 @media only screen and (max-width: 500px) {
-  .titleHero {
-    font-size: var(--40px);
+  .heroImg {
+    height: auto;
+    width: 100%;
   }
 }
 /* text slide */
@@ -409,6 +634,13 @@ html.is-rendering .transition-slideIn {
   height: 600px;
   width: auto;
 }
+.dialogTitleContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: var(--24px);
+}
 .dialogText {
   color: var(--color-highlight);
   font-size: var(--24px);
@@ -416,11 +648,6 @@ html.is-rendering .transition-slideIn {
   margin: 0;
   width: 40%;
   opacity: 0.8;
-}
-.dialogDescription .button {
-  position: absolute;
-  top: 0;
-  left: var(--64px);
 }
 .burgersContainer {
   display: flex;
@@ -457,13 +684,76 @@ html.is-rendering .transition-slideIn {
   height: 100%;
   width: auto;
 }
+@media only screen and (max-width: 1400px) {
+  .dialogText {
+    width: 50%;
+  }
+  .dialogBurger {
+    height: auto;
+    width: 40%;
+  }
+  .dialogContent {
+    height: 60%;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .dialogText {
+    font-size: var(--20px);
+  }
+}
+@media only screen and (max-width: 750px) {
+  .dialogContent {
+    flex-direction: column;
+  }
+  .dialogText {
+    width: 90%;
+  }
+  .dialogBurger {
+    height: auto;
+    width: 60%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .card {
+    width: calc(90% - var(--16px) * 2);
+    margin: auto;
+  }
+  .burger {
+    height: auto;
+    width: 50%;
+    margin: 0 -20%;
+  }
+  .soda {
+    height: auto;
+    width: 30%;
+  }
+  .fries {
+    height: auto;
+    width: 50%;
+  }
+  .burgersContainer {
+    padding: 0;
+    padding-bottom: var(--64px);
+    gap: var(--64px);
+  }
+  .card-burger {
+    width: 90%;
+    height: auto;
+    margin: auto;
+  }
+  .burgerBackground {
+    height: auto;
+    width: 100%;
+  }
+}
 /* About */
 .about {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: calc(100vh - var(--192px));
+  min-height: calc(100vh - var(--192px));
+  padding: var(--64px) 0;
   color: var(--color-text);
   background-color: var(--color-main);
 }
@@ -478,6 +768,15 @@ html.is-rendering .transition-slideIn {
   margin: 0;
   width: 60%;
   text-align: left;
+}
+@media only screen and (max-width: 700px) {
+  .aboutTitle {
+    font-size: var(--32px);
+  }
+  .aboutText {
+    width: 90%;
+    font-size: var(--20px);
+  }
 }
 /* Footer */
 .footer {
@@ -512,5 +811,6 @@ html.is-rendering .transition-slideIn {
   .footer {
     justify-content: flex-end;
     height: auto;
+    font-size: var(--20px);
   }
 }
