--- a/index.css
+++ b/index.css
@@ -23,6 +23,8 @@ body {
   margin: 0;
   font-family: "Main", sans-serif;
   text-align: center;
+  color: var(--color-text);
+  background-color: var(--color-main);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -47,19 +49,17 @@ input:-webkit-autofill:active {
   --color-highlight: #ffe355;
   --color-text: white;
   --shadow: -5px 5px 7px rgba(0, 0, 0, 0.3);
-  --16px: 1rem;
-  --20px: 1.25rem; /* Mobile */
-  --24px: 1.5rem;
-  --32px: 2rem;
-  --40px: 2.5rem; /* Mobile */
-  --48px: 3rem;
-  --64px: 4rem;
-  --80px: 5rem;
-  --96px: 6rem;
-  --192px: 12rem;
-  --384px: 24rem;
-  --768px: 48rem;
-  --1152px: 72rem;
+  --font-smaller: 1.1rem;
+  --font-small: 1.25rem;
+  --font-medium: 1.5rem;
+  --font-large: 1.75rem;
+  --font-xlarge: 2rem;
+}
+@media only screen and (min-width: 700px) {
+  :root {
+    --font-smaller: 1.3rem;
+    --font-xlarge: 3rem;
+  }
 }
 body::-webkit-scrollbar {
   width: var(--16px);
@@ -78,6 +78,13 @@ body::-webkit-scrollbar-thumb {
   body {
     scrollbar-color: var(--color-4) var(--color-3);
   }
+}
+p {
+  font-size: var(--font-smaller);
+  margin: 0;
+  text-align: left;
+  max-width: 60rem;
+  margin-inline: auto;
 }
 /* page transitions */
 .transition-slideIn {
@@ -106,36 +113,33 @@ html.is-rendering .transition-slideIn {
     transition: all 0.5s ease-in-out;
   }
 }
+/* Navigation */
 .navBar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: var(--80px);
-  width: calc(100% - var(--32px) * 2);
-  padding: 0 var(--32px);
-  position: fixed;
+  position: sticky;
+  top: 0;
+  height: 5rem;
+  padding: 0 3rem;
   z-index: 2;
 }
 .brand {
   font-family: "Brand";
-  font-size: var(--32px);
-  color: var(--color-text);
+  font-size: var(--font-large);
   text-shadow: var(--shadow);
   font-weight: 400;
-  text-align: center;
 }
 .nav {
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--32px);
+  gap: 3rem;
 }
 .navItem {
   text-decoration: none;
-  font-weight: 600;
+  text-underline-offset: 0.3rem;
   color: var(--color-text);
   text-shadow: var(--shadow);
-  font-size: var(--24px);
+  font-size: var(--font-medium);
 }
 .navItem:hover {
   color: var(--color-highlight);
@@ -147,11 +151,12 @@ html.is-rendering .transition-slideIn {
 .navMobile {
   display: none;
 }
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 700px) {
   .navBar {
     align-items: flex-start;
-    padding-left: var(--16px);
-    width: calc(100% - var(--16px));
+    padding: 0 0 0 1rem;
+    max-width: 100vw;
+    overflow-x: clip;
   }
   .navBar h1 {
     margin: auto 0;
@@ -163,8 +168,8 @@ html.is-rendering .transition-slideIn {
     display: flex;
     flex-direction: column-reverse;
     align-items: flex-end;
-    margin-top: var(--16px);
-    gap: var(--16px);
+    margin-top: 1rem;
+    gap: 1rem;
   }
   .hamburger {
     display: flex;
@@ -174,12 +179,11 @@ html.is-rendering .transition-slideIn {
     background-color: var(--color-text);
     -webkit-user-select: none;
     user-select: none;
-    width: var(--64px);
-    height: var(--64px);
-    border-radius: var(--48px) 0px 0px var(--48px);
-    padding-left: var(--16px);
-    gap: 5px;
-    position: relative;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 3rem 0 0 3rem;
+    padding-left: 1rem;
+    gap: 0.3rem;
     transition: background-color 0.5s;
     box-shadow: var(--shadow);
   }
@@ -195,11 +199,9 @@ html.is-rendering .transition-slideIn {
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1),
       background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1), opacity 0.55s ease;
   }
-
   .hamburger span:nth-child(1) {
     transform-origin: 0% 0%;
   }
-
   .hamburger span:nth-child(3) {
     transform-origin: 0% 100%;
   }
@@ -222,18 +224,16 @@ html.is-rendering .transition-slideIn {
     align-items: center;
     justify-content: space-between;
     margin: 0;
-    top: var(--96px);
+    top: 6rem;
     right: 5%;
-    border-radius: var(--32px) 0 0 var(--32px);
+    border-radius: 2rem 0 0 2rem;
     list-style-type: none;
-    -webkit-font-smoothing: antialiased;
     transform: translateX(110%);
     background-color: var(--color-text);
     transition: transform 0.4s;
-    overflow: hidden;
     box-shadow: var(--shadow);
-    padding: var(--16px);
-    gap: var(--16px);
+    padding: 1rem;
+    gap: 1rem;
   }
   .navMenu li a {
     display: flex;
@@ -242,104 +242,74 @@ html.is-rendering .transition-slideIn {
     flex-direction: column;
     text-decoration: none;
     color: black;
-    transition: color 0.3s ease;
-    width: var(--96px);
-    height: var(--80px);
-    font-size: var(--20px);
+    width: 6rem;
+    height: 6rem;
+    font-size: var(--font-small);
     font-weight: 600;
   }
   .navMenu li a img {
-    width: var(--32px);
+    width: 2rem;
   }
-
-  /*
- * And let's slide it in from the right
- */
   .navMobile input:checked ~ .navMenu {
     transform: none;
   }
 }
 /* Hero */
 .heroSection {
-  display: flex;
-  align-items: center;
+  display: grid;
   justify-content: center;
-  flex-direction: column;
+  place-content: center;
+  justify-items: center;
+  gap: 3rem;
+  grid-template-areas: "title" "img" "text" "button";
   background-color: var(--color-main);
-  width: 100%;
   max-width: 1920px;
-  padding-top: var(--80px);
-  height: calc(100vh - var(--64px) - var(--80px));
-  height: calc(100svh - var(--64px) - var(--80px));
+  margin-inline: auto;
+  height: calc(100vh - 4rem - 5rem);
+  height: calc(100svh - 4rem - 5rem);
   max-height: 1200px;
-  overflow: hidden;
-  gap: var(--24px);
 }
-.heroTitleContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: var(--96px);
-  margin-bottom: -8rem;
+.heroTitle {
+  grid-area: title;
+  font-size: clamp(3rem, 12vw, 14rem);
+  text-shadow: var(--shadow);
+  font-weight: 600;
+  line-height: 80%;
+  margin: 0;
 }
 .megaText {
   position: relative;
+  font-size: clamp(3rem, 9vw, 11rem);
   z-index: 1;
-  margin: 0;
-  transform: rotate(-20deg);
-  font-size: 10rem;
-  text-shadow: var(--shadow);
+  margin-right: 5vw;
   font-family: "Brand";
   color: var(--color-highlight);
 }
-.heroTitle {
-  color: var(--color-text);
-  text-shadow: var(--shadow);
-  font-weight: 600;
-  font-style: normal;
-  line-height: 10rem;
-  font-size: 16rem;
-  margin: 0;
-}
-
-.imgAndTextContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-}
 .imgContainer {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  grid-area: img;
 }
 .heroImg {
-  margin-bottom: var(--16px);
+  width: 100%;
+  max-width: 40rem;
 }
 .imgShadow {
   background-color: rgba(0, 0, 0, 0.454);
   width: 80%;
-  height: var(--32px);
+  margin-inline: auto;
+  height: 2rem;
   border-radius: 50%;
   box-shadow: 0 0 10px black;
 }
-.textContainer {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
-  width: 35%;
-}
 .heroSubtitle {
-  font-size: var(--32px);
+  grid-area: text;
+  font-size: var(--font-xlarge);
   font-weight: 600;
-  text-align: left;
-  margin-top: 0;
-  color: var(--color-text);
   text-shadow: var(--shadow);
-  margin-bottom: var(--32px);
 }
 .button {
+  grid-area: button;
+  width: fit-content;
+  height: fit-content;
   background-color: var(--color-highlight);
   border: 2px solid black;
   border-radius: 30px;
@@ -348,10 +318,8 @@ html.is-rendering .transition-slideIn {
   cursor: pointer;
   display: inline-block;
   font-weight: 600;
-  font-size: var(--24px);
-  padding: 0 18px;
-  line-height: 50px;
-  text-align: center;
+  font-size: var(--font-large);
+  padding: 0.8rem 2rem;
   text-decoration: none;
   user-select: none;
   -webkit-user-select: none;
@@ -367,152 +335,41 @@ html.is-rendering .transition-slideIn {
 .button:focus {
   outline: none;
 }
-@media only screen and (max-width: 1700px) {
-  .heroTitleContainer {
-    margin-bottom: -5rem;
-  }
-  .heroTitle {
-    font-size: 16rem;
-  }
-  .heroImg {
-    width: 80%;
-  }
-}
-@media only screen and (max-width: 1500px) {
-  .heroTitle {
-    font-size: 13rem;
-  }
-  .megaText {
-    font-size: 8rem;
-  }
-}
-@media only screen and (max-width: 1200px) {
-  .heroTitleContainer {
-    gap: var(--48px);
-  }
-  .heroTitle {
-    font-size: 10rem;
-  }
-  .megaText {
-    font-size: 8rem;
-  }
-}
-@media only screen and (max-width: 1000px) {
-  .heroTitleContainer {
-    margin-bottom: -3rem;
-  }
-  .heroTitle {
-    font-size: 8rem;
+@media only screen and (min-width: 90rem) {
+  .heroSection {
+    grid-template-areas:
+      "title title"
+      "img text"
+      "img button";
+    grid-template-rows:
+      8rem
+      auto
+      auto;
   }
   .heroSubtitle {
-    font-size: var(--24px);
-  }
-  .button {
-    font-size: var(--20px);
-  }
-  .textContainer {
-    width: 60%;
-  }
-  .imgText {
-    top: 21%;
-    font-size: var(--80px);
-  }
-  .heroImg {
-    width: 100%;
-    margin: 0;
-  }
-  .imgShadow {
-    width: 80%;
-  }
-}
-@media only screen and (max-width: 900px) {
-  .heroSection {
-    justify-content: center;
-  }
-  .heroTitleContainer {
-    margin: 0;
-  }
-  .megaText {
-    font-size: 6rem;
-    line-height: 6rem;
-  }
-  .heroTitle {
-    font-size: 7rem;
-    line-height: 0rem;
-  }
-  .imgText {
-    font-size: var(--64px);
-    top: 24%;
-  }
-}
-@media only screen and (max-width: 750px) {
-  .heroSection {
-    height: calc(100svh - var(--80px));
-  }
-  .heroTitleContainer {
-    flex-direction: column;
-  }
-  .megaText {
-    font-size: 5rem;
-    line-height: 4rem;
-  }
-  .heroTitle {
-    font-size: 5rem;
-    line-height: 4rem;
-  }
-  .imgAndTextContainer {
-    flex-direction: column;
-    height: 70%;
-  }
-  .imgContainer {
-    height: 70%;
-  }
-  .heroImg {
-    height: 100%;
-    width: auto;
-  }
-  .imgShadow {
-    display: none;
-  }
-  .textContainer {
-    align-items: center;
-    gap: var(--16px);
-    width: 100%;
-    height: 30%;
-  }
-  .heroSubtitle {
-    margin: 0;
-  }
-}
-@media only screen and (max-width: 500px) {
-  .heroImg {
-    height: auto;
-    width: 100%;
+    align-self: end;
   }
 }
 /* text slide */
 .textBackground {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
   max-width: 1920px;
-  height: var(--64px);
-  overflow: hidden;
+  height: 4rem;
+  overflow: clip;
   text-overflow: clip;
   white-space: nowrap;
-  color: var(--color-text);
   background-color: black;
+  margin-inline: auto;
 }
 .textRow {
   display: flex;
   justify-content: center;
-  align-items: center;
-  font-size: var(--32px);
+  font-size: var(--font-large);
   font-weight: 600;
   text-transform: uppercase;
-  width: var(--192px);
+  width: 12rem;
   -webkit-animation: slide 20s linear alternate infinite;
   animation: slide 20s linear alternate infinite;
 }
@@ -542,275 +399,159 @@ html.is-rendering .transition-slideIn {
 }
 @media only screen and (max-width: 700px) {
   .textRow {
-    font-size: var(--32px);
+    font-size: var(--font-medium);
   }
 }
 /* Menu */
-.menu {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  color: var(--color-text);
-  background-color: var(--color-main);
-  padding: var(--64px) 0 0 0;
-}
 .promoContainer {
-  display: flex;
-  align-items: center;
+  display: grid;
   justify-content: center;
-  flex-wrap: wrap;
-  gap: var(--64px);
-  width: 100%;
+  overflow-x: clip;
+  gap: 5rem;
+  padding: 0 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 40rem));
 }
 .menuTitle {
-  font-size: var(--32px);
-  font-weight: 600;
-  margin-top: var(--96px);
-  margin-bottom: var(--48px);
+  font-size: var(--font-xlarge);
+  margin-top: 6rem;
+  margin-bottom: 4rem;
 }
 .card {
   cursor: pointer;
   overflow: visible !important;
-  border-radius: var(--64px);
+  border-radius: 4rem;
   border: 2px solid var(--color-text);
-  padding: var(--16px);
-  padding-bottom: var(--48px);
+  padding: 1rem;
+  padding-bottom: 3rem;
 }
 .itemTitle {
-  font-size: var(--48px);
+  font-size: var(--font-xlarge);
   font-family: "Brand";
   margin: 0;
 }
 .itemDiscount {
-  font-size: var(--32px);
+  font-size: var(--font-large);
   font-family: "Main";
-  font-weight: 600;
-  margin: 0;
+  text-align: center;
 }
 .burger {
-  height: 250px;
-  width: auto;
+  width: 50%;
   position: relative;
   z-index: 1;
-  margin: 0 -150px;
-  margin-bottom: calc(-1 * var(--48px));
+  margin: 0 -20%;
+  margin-bottom: -3rem;
 }
 .soda {
-  height: 450px;
+  width: 35%;
 }
 .fries {
-  height: 350px;
+  width: 50%;
 }
 .atropos-shadow {
   background-color: rgba(0, 0, 0, 0.3) !important;
   position: relative !important;
-  margin-top: -70px;
+  margin-top: -6rem;
+  margin-inline: auto !important;
+  max-width: 30rem !important;
   height: 100px !important;
   border-radius: 50%;
-  display: none !important;
 }
-.dialogDescription {
-  background-color: transparent;
-  border-radius: var(--16px);
-  text-align: left;
-  border: none;
+/* Burgers */
+.burgersContainer {
+  display: grid;
+  justify-content: center;
+  padding: 5rem 1rem;
+  gap: 5rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 30rem));
 }
-.dialogDescription .brand {
+.atropos-inner {
+  border-radius: 4rem;
+}
+.card-burger {
+  cursor: pointer;
+  border-radius: 4rem;
+  overflow: clip;
+  width: 100%;
+  aspect-ratio: 1 / 1;
+}
+.burgerTitle {
+  z-index: 1;
+  font-size: var(--font-xlarge);
+  font-family: "Brand";
   margin: 0;
-  font-size: var(--48px);
+}
+.burgerBackground {
+  height: 100%;
+}
+/* Dialog */
+.dialogDescription {
+  width: 100%;
+  color: var(--color-text);
+  background-color: transparent;
+  border: none;
 }
 .dialogDescription::backdrop {
   background-color: rgba(0, 0, 0, 0.9);
 }
 .dialogContent {
-  display: flex;
-  align-items: center;
+  display: grid;
   justify-content: center;
-  width: 100%;
-  gap: var(--48px);
+  place-items: center;
+  gap: 3rem;
+  max-width: 1920px;
+  margin-inline: auto;
+  padding: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 40rem));
+  grid-template-areas: "button" "title" "img" "text";
+}
+.dialogContent button {
+  grid-area: button;
+}
+.dialogContent .brand {
+  grid-area: title;
+  margin: 0;
+  font-size: var(--font-xlarge);
 }
 .dialogBurger {
-  height: 600px;
-  width: auto;
-}
-.dialogTitleContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  gap: var(--24px);
+  grid-area: img;
+  width: 100%;
 }
 .dialogText {
+  grid-area: text;
   color: var(--color-highlight);
-  font-size: var(--24px);
+  font-size: var(--font-medium);
   font-weight: 400;
   margin: 0;
-  width: 40%;
+  width: 100%;
   opacity: 0.8;
 }
-.burgersContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-  color: var(--color-text);
-  padding: var(--64px) 0;
-  gap: var(--64px);
-}
-.atropos-inner {
-  border-radius: var(--64px);
-}
-.card-burger {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  border-radius: var(--64px);
-  overflow: hidden;
-  width: 550px;
-  height: 600px;
-}
-.burgerTitle {
-  z-index: 1;
-  font-size: var(--48px);
-  font-family: "Brand";
-  margin: 0;
-}
-.burgerBackground {
-  position: relative;
-  height: 100%;
-  width: auto;
-}
-@media only screen and (max-width: 1400px) {
-  .dialogText {
-    width: 50%;
-  }
-  .dialogBurger {
-    height: auto;
-    width: 40%;
-  }
+@media only screen and (min-width: 90rem) {
   .dialogContent {
-    height: 60%;
-  }
-}
-@media only screen and (max-width: 1000px) {
-  .dialogText {
-    font-size: var(--20px);
-  }
-}
-@media only screen and (max-width: 750px) {
-  .dialogContent {
-    flex-direction: column;
-  }
-  .dialogText {
-    width: 90%;
-  }
-  .dialogBurger {
-    height: auto;
-    width: 60%;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .card {
-    width: calc(90% - var(--16px) * 2);
-    margin: auto;
-  }
-  .burger {
-    height: auto;
-    width: 50%;
-    margin: 0 -20%;
-  }
-  .soda {
-    height: auto;
-    width: 30%;
-  }
-  .fries {
-    height: auto;
-    width: 50%;
-  }
-  .burgersContainer {
-    padding: 0;
-    padding-bottom: var(--64px);
-    gap: var(--64px);
-  }
-  .card-burger {
-    width: 90%;
-    height: auto;
-    margin: auto;
-  }
-  .burgerBackground {
-    height: auto;
-    width: 100%;
+    grid-template-areas:
+      "button title"
+      "text img";
   }
 }
 /* About */
 .about {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  min-height: calc(100vh - var(--192px));
-  padding: var(--64px) 0;
-  color: var(--color-text);
-  background-color: var(--color-main);
+  min-height: 80vh;
+  padding: 2rem;
 }
 .aboutTitle {
-  font-family: "Brand";
-  font-weight: 400;
-  font-size: var(--48px);
-}
-.aboutText {
-  font-size: var(--24px);
-  font-weight: 400;
-  margin: 0;
-  width: 60%;
-  text-align: left;
-}
-@media only screen and (max-width: 700px) {
-  .aboutTitle {
-    font-size: var(--32px);
-  }
-  .aboutText {
-    width: 90%;
-    font-size: var(--20px);
-  }
+  font-size: var(--font-xlarge);
 }
 /* Footer */
 .footer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   background-color: black;
-  font-size: var(--24px);
-  margin: auto;
   font-weight: 600;
-  padding: 0 var(--48px);
-  color: var(--color-text);
-  height: var(--192px);
-  z-index: 1;
+  padding: 3rem 0;
+}
+.footer p {
+  width: fit-content;
 }
 .link {
   color: var(--color-highlight);
-  text-decoration: underline;
 }
 .link:hover {
   color: var(--color-text);
-}
-@media only screen and (max-width: 1000px) {
-  .linkContainer {
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-  }
-}
-@media only screen and (max-width: 700px) {
-  .footer {
-    justify-content: flex-end;
-    height: auto;
-    font-size: var(--20px);
-  }
 }
