--- a/index.css
+++ b/index.css
@@ -258,7 +258,7 @@ html.is-rendering .transition-slideIn {
   background-color: var(--color-main);
   max-width: 1920px;
   margin-inline: auto;
-  height: calc(100svh - 5rem);
+  min-height: calc(100svh - 5rem);
   max-height: 1200px;
 }
 .heroTitle {
@@ -327,9 +327,12 @@ html.is-rendering .transition-slideIn {
 .button:focus {
   outline: none;
 }
+.heroSection .button {
+  margin-bottom: 2rem;
+}
 @media only screen and (min-width: 90rem) {
   .heroSection {
-    height: calc(100vh - 4rem - 5rem);
+    min-height: calc(100vh - 4rem - 5rem);
     gap: 3rem;
     grid-template-areas:
       "title title"
